
This release ...

Contributor to this release: Dean Giberson, Richard Weait, Chris Wayne,
David Vasak, and Mike Frysinger.

Main changes since 0.4.2:
- Add a pair mode (issue#33)
- Removal of the Timeout class (issue#43)
- Get a UI abstraction layer (issue#31)
- Keep a rolling log of the last communication to help debugging (issue#67)
- Support sending logging output to the syslog (issue#134)


galileo 0.4.4 (????-??-??)
--------------------------

This release adds support for older python version (2.6).

Contributor to this release: Slobodan Miskovic.

Main changes since 0.4.3:
- Add support for python 2.6
- Fix handling of BackOffException (issue#140)


galileo 0.4.3 (2014-11-27)
--------------------------

This is the third patch release of galileo 0.4, a free utility to securely
synchronize fitbit bluetooth trackers with the fitbit web service.

This release adds support for the new Charge tracker.

Main changes since 0.4.2:
- Increase a timeout to support the Charge tracker (issue#123)
- Exclude the `tests` packages when installing.


galileo 0.4.2 (2014-10-15)
--------------------------

This is the second patch release of galileo 0.4, a free utility to securely
synchronize fitbit bluetooth trackers with the fitbit web service.

This release fixes a couple of API changes in the dependent libraries since
the release of the previous version.

Main changes since 0.4.1:
- Correctly recognize TimeoutError from libusb0 (issue#82)
- Fix TypeError with newer version of PyUSB (issue#36, issue#77, and a few
  more ...)
- Fix error when displaying the reason for a Connection Error (issue#118).


galileo 0.4.1 (2014-06-22)
--------------------------

This is the first patch release of galileo 0.4, a free utility to securely
synchronize fitbit bluetooth trackers with the fitbit web-service.

This release fixes a number of issues reported with the release of galileo 0.4.
All users of galileo 0.4 are encouraged to upgrade.

Main changes since 0.4: